--- a/package.json
+++ b/package.json
@@ -9,12 +9,14 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@radix-ui/react-slot": "^1.2.3",
     "@types/mdx": "^2.0.13",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "eslint-plugin-perfectionist": "^4.13.0",
     "eslint-plugin-unicorn": "^59.0.1",
     "eslint-plugin-unused-imports": "^4.1.4",
+    "framer-motion": "^12.12.1",
     "fumadocs-core": "^15.3.4",
     "fumadocs-docgen": "^2.0.0",
     "fumadocs-mdx": "^11.6.5",
@@ -22,7 +24,7 @@
     "fumadocs-typescript": "^4.0.5",
     "fumadocs-ui": "^15.3.4",
     "lucide-react": "^0.511.0",
-    "next": "15.3.2",
+    "next": "^15.3.2",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "recma-mdx-escape-missing-components": "^1.1.3",
