--- a/package.json
+++ b/package.json
@@ -6,7 +6,9 @@
     "dev": "next dev --turbopack",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "postinstall": "fumadocs generate",
+    "vercel:debug": "ls -l .source && ls -l .source/index.ts"
   },
   "dependencies": {
     "@radix-ui/react-slot": "^1.2.3",
